<resources>
    <string name="app_name">Советчик закусок к алкоголю</string>
    <string name="welcome_text">Узнай чем  запивать еду и чем закусывать алкоголь!</string>
    <string name="drinks">Напитки</string>
    <string name="foot">Еда</string>
    <string name="what_is_it_">Что это?</string>
    <string name="Stories_about">Истории...</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="choose_food_group">Выберите вид блюда</string>
    <string name="in_fact">Интересный факт № </string>
    <string name="choose_dish">Выберите блюдо</string>
    <string name="choose_drink">Выберите напиток</string>
    <string name="interesting_fact_about">Интересный факт!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="turnOnMusic">Включить музыку</string>
    <string name="aditional">Дополнительно</string>
    <string name="search">Поиск</string>
    <string name="drinkStrength">По крепости напитка</string>
    <string name="CountryCreation">Страна производства</string>
    <string name="takeTime">Время приема</string>
    <string name="searchByFood">Поиск по еде</string>
    <string name="searchByDrinks">Поиск по напиткам</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">Настройки</string>
    <string name="turnOffSound">Выключить звук</string>
    <string name="about_us">О нас</string>
    <string name="wiskyPivo">Виски, пиво...</string>
    <string name="fish">Рыба, шашлык...</string>
    <string name="twentytwo"><![CDATA[< 22%]]></string>
    <string name="mezi">22% - 56%</string>
    <string name="vicepr"><![CDATA[56% <]]></string>
</resources>
